add test for handler & fix swagger
