# internal/handler/rest/auth.go
@@ -11,6 +11,16 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
+// @Summary SignUp
+// @Tags auth
+// @Description create account
+// @ID create-account
+// @Accept json
+// @Produce json
+// @Param input body domain.SignUpInput true "account info"
+// @Success 200
+// @Failure 400,500 {object} errorResponse
+// @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var input domain.SignUpInput
 
@@ -32,6 +42,16 @@ func (h *Handler) signUp(c *gin.Context) {
 	c.JSON(http.StatusOK, nil)
 }
 
+// @Summary SignIn
+// @Tags auth
+// @Description login
+// @ID login
+// @Accept json
+// @Produce json
+// @Param input body domain.SignInInput true "credentials"
+// @Success 200 {string} string "token"
+// @Failure 400,500 {object} errorResponse
+// @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var input domain.SignInInput
 	if err := c.BindJSON(&input); err != nil {
@@ -63,6 +83,15 @@ func (h *Handler) signIn(c *gin.Context) {
 	})
 }
 
+// @Summary Refresh
+// @Tags auth
+// @Description refresh
+// @ID refresh
+// @Accept json
+// @Produce json
+// @Success 200 {string} string "token"
+// @Failure 400,500 {object} errorResponse
+// @Router /auth/refresh [get]
 func (h *Handler) refresh(c *gin.Context) {
 	cookie, err := c.Request.Cookie("Authorization")
 	if err != nil {
@@ -114,6 +143,15 @@ func getTokenFromCookie(cookieValue string) (string, error) {
 	return headerParts[1], nil
 }
 
+// @Summary LogOut
+// @Tags auth
+// @Description logout
+// @ID logout
+// @Accept json
+// @Produce json
+// @Success 200
+// @Failure 400,500 {object} errorResponse
+// @Router /auth/logout [post]
 func (h *Handler) logOut(c *gin.Context) {
 	cookie, err := c.Request.Cookie("Authorization")
 	if err != nil {
